--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "incenteev/composer-parameter-handler" : "~2.0"
     },
     "require-dev": {
-        "sensio/generator-bundle"              : "~2.3"
+        "sensio/generator-bundle"              : "~2.3",
+        "fabpot/php-cs-fixer"                  : "~1.8"
     },
     "autoload": {
         "psr-4": {
