--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,6 @@ before_script:
     - app/console --env=test --no-interaction doctrine:schema:create
 
 script:
-    - phpunit
+    - phpunit --coverage-clover=coverage.clover
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
