--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,4 @@
-app:
-    resource: "@AppBundle/Controller/"
+web:
+    resource: "@AppBundle/Controller/Web/"
     type:     annotation
+    prefix:   /
