--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -13,4 +13,6 @@ parameters:
     mailer_password:        ~
     delivery_address:       ~
 
+    locale:                 en
+
     secret:                 8fb375ea50e0f6230ad0cc722be8293a7177f9e4
