--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,5 +14,6 @@ parameters:
     delivery_address:       ~
 
     locale:                 en
+    theme:                  azure
 
     secret:                 8fb375ea50e0f6230ad0cc722be8293a7177f9e4
