--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -68,7 +68,13 @@ doctrine:
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
+        mappings:
+            model:
+                type: annotation
+                dir: "%kernel.root_dir%/../src/eTraxis/Model"
+                prefix: eTraxis\Model
+                alias: eTraxis
+                is_bundle: false
 
 # Swiftmailer Configuration
 swiftmailer:
