--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -6,6 +6,7 @@ parameters:
     database_name:          etraxis
     database_user:          root
     database_password:      ~
+    database_charset:       UTF8
 
     mailer_transport:       smtp
     mailer_host:            127.0.0.1
