UnitTest data fixtures

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -9,5 +9,6 @@ tools:
 filter:
     excluded_paths:
         - 'app/*'
+        - 'src/AppBundle/DataFixtures/*'
         - 'tests/*'
         - 'web/*'
