--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
 before_script:
     - app/console --env=test --no-interaction doctrine:database:create
     - app/console --env=test --no-interaction doctrine:schema:create
+    - app/console --env=test --no-interaction doctrine:fixtures:load --fixtures=src/AppBundle/DataFixtures/Tests
 
 script:
     - phpunit --coverage-clover=coverage.clover
