--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "doctrine/dbal"                        : "~2.5",
         "doctrine/doctrine-bundle"             : "~1.4",
         "doctrine/doctrine-fixtures-bundle"    : "~2.2",
+        "doctrine/doctrine-migrations-bundle"  : "~1.0",
+        "doctrine/migrations"                  : "~1.0@dev",
         "symfony/assetic-bundle"               : "~2.3",
         "symfony/swiftmailer-bundle"           : "~2.3",
         "symfony/monolog-bundle"               : "~2.4",
