--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,9 @@
+login_check:
+    path: /login_check
+
+logout:
+    path: /logout
+
 web:
     resource: "@AppBundle/Controller/Web/"
     type:     annotation
