--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,16 @@ php:
     - 5.5
     - 5.6
 
+before_install:
+    - sudo apt-get update -qq
+    - sudo apt-get install -y php5-ldap
+
 install:
     - cp app/config/parameters.yml.dist app/config/parameters.yml
     - composer install -n
 
 before_script:
+    - echo "extension = ldap.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
     - app/console --env=test --no-interaction doctrine:database:create
     - app/console --env=test --no-interaction doctrine:schema:create
     - app/console --env=test --no-interaction doctrine:fixtures:load --fixtures=src/AppBundle/DataFixtures/Tests
