--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,3 +1,8 @@
+imports:
+    - { resource: middleware.yml }
+    - { resource: commands.yml }
+    - { resource: events.yml }
+
 services:
 
     ldap:
