--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -25,3 +25,6 @@ parameters:
     theme:                  azure
 
     secret:                 8fb375ea50e0f6230ad0cc722be8293a7177f9e4
+
+    security_auth_attempts: ~
+    security_lock_time:     ~
