--- a/app/config/commands.yml
+++ b/app/config/commands.yml
@@ -1,5 +1,10 @@
 services:
 
+    command.user.register:
+        class: eTraxis\SimpleBus\CommandHandler\User\RegisterUserCommandHandler
+        tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Command\User\RegisterUserCommand }]
+        arguments: [ @logger, @doctrine ]
+
     command.user.lock:
         class: eTraxis\SimpleBus\CommandHandler\User\LockUserCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Command\User\LockUserCommand }]
