--- a/app/config/commands.yml
+++ b/app/config/commands.yml
@@ -14,3 +14,8 @@ services:
         class: eTraxis\SimpleBus\CommandHandler\User\UnlockUserCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Command\User\UnlockUserCommand }]
         arguments: [ @logger, @doctrine ]
+
+    command.user.index:
+        class: eTraxis\SimpleBus\CommandHandler\User\ListUsersCommandHandler
+        tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Command\User\ListUsersCommand }]
+        arguments: [ @security.authorization_checker, @translator, @doctrine ]
