--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,27 @@ php:
     - 5.4
     - 5.5
     - 5.6
+    - hhvm
 
 env:
     - DB=mysql
     - DB=pgsql
 
+matrix:
+    exclude:
+        - php: hhvm
+          env: DB=pgsql  # PDO driver for pgsql is unsupported by HHVM
+
 before_install:
     - sudo apt-get update -qq
     - sudo apt-get install -y php5-ldap
+    - if [[ "$(phpenv version-name)" != "hhvm" ]]; then echo "extension = ldap.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; fi
 
 install:
     - cp app/config/travis.$DB.yml app/config/parameters.yml
     - composer install -n
 
 before_script:
-    - echo "extension = ldap.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
     - app/console --env=test --no-interaction doctrine:database:create
     - app/console --env=test --no-interaction doctrine:schema:create
     - app/console --env=test --no-interaction doctrine:fixtures:load --fixtures=src/AppBundle/DataFixtures/Tests
