--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "symfony/assetic-bundle"               : "~2.3",
         "symfony/swiftmailer-bundle"           : "~2.3",
         "symfony/monolog-bundle"               : "~2.4",
-        "sensio/distribution-bundle"           : "~3.0,>=3.0.12",
+        "sensio/distribution-bundle"           : "~4.0",
         "sensio/framework-extra-bundle"        : "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler" : "~2.0",
         "simple-bus/symfony-bridge"            : "~4.0"
@@ -28,7 +28,7 @@
     "autoload": {
         "psr-4": {
             "": [ "src/", "tests/" ],
-            "SymfonyStandard\\": "app/"
+            "SymfonyStandard\\": "app/SymfonyStandard/"
         }
     },
     "minimum-stability": "stable",
