--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,14 @@
     "type": "project",
     "license": "GPL-3.0",
     "require": {
-        "php"                                  : ">=5.4",
+        "php"                                  : "~5.4",
         "symfony/symfony"                      : "~2.7",
         "doctrine/orm"                         : "~2.5",
         "doctrine/dbal"                        : "~2.5",
         "doctrine/doctrine-bundle"             : "~1.4",
         "doctrine/doctrine-fixtures-bundle"    : "~2.2",
         "doctrine/doctrine-migrations-bundle"  : "~1.0",
-        "doctrine/migrations"                  : "~1.0@dev",
+        "doctrine/migrations"                  : "~1.0@alpha",
         "symfony/assetic-bundle"               : "~2.3",
         "symfony/swiftmailer-bundle"           : "~2.3",
         "symfony/monolog-bundle"               : "~2.4",
