--- a/bower.json
+++ b/bower.json
@@ -6,9 +6,8 @@
         "html5shiv": "3.7.2",
         "jquery": "2.1.4",
         "jquery.ui": "1.11.4",
-        "jquery-cookie": "1.4.1",
-        "blockui": "malsup/blockui#2.70",
-        "jquery-form": "jquery-form#3.51",
+        "blockui": "2.70",
+        "jquery-form": "3.51",
         "datatables": "1.10.7",
         "datatables-plugins": "1.10.7"
     }
