Reorganize SimpleBus commands

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,7 +1,6 @@
 imports:
     - { resource: simplebus/middleware.yml }
-    - { resource: simplebus/commands.yml }
-    - { resource: simplebus/events.yml }
+    - { resource: simplebus/users.yml }
 
 services:
 
