--- a/app/config/simplebus/users.yml
+++ b/app/config/simplebus/users.yml
@@ -25,6 +25,11 @@ services:
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Users\FindUserCommand }]
         arguments: [ @doctrine ]
 
+    command.user.update:
+        class: eTraxis\SimpleBus\Users\Handler\UpdateUserCommandHandler
+        tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Users\UpdateUserCommand }]
+        arguments: [ @logger, @validator, @translator, @doctrine, @security.token_storage ]
+
     command.users.disable:
         class: eTraxis\SimpleBus\Users\Handler\DisableUsersCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Users\DisableUsersCommand }]
