--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "doctrine/doctrine-bundle"             : "~1.4",
         "doctrine/doctrine-fixtures-bundle"    : "~2.2",
         "doctrine/doctrine-migrations-bundle"  : "~1.0",
-        "doctrine/migrations"                  : "~1.0@alpha",
+        "doctrine/migrations"                  : "~1.0",
         "symfony/assetic-bundle"               : "~2.3",
         "symfony/swiftmailer-bundle"           : "~2.3",
         "symfony/monolog-bundle"               : "~2.4",
