--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,10 @@ php:
     - 5.4
     - 5.5
     - 5.6
-    - hhvm
 
 env:
     - DB=mysql
     - DB=pgsql
-
-matrix:
-    exclude:
-        - php: hhvm
-          env: DB=pgsql  # PDO driver for pgsql is unsupported by HHVM
 
 sudo: false
 
@@ -23,7 +17,7 @@ addons:
         - php5-ldap
 
 before_install:
-    - if [[ "$(phpenv version-name)" != "hhvm" ]]; then echo "extension = ldap.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; fi
+    - echo "extension = ldap.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
 
 install:
     - cp app/config/travis/parameters.$DB.yml app/config/parameters.yml
