--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "license": "GPL-3.0",
     "require": {
-        "php"                                  : "~5.4",
+        "php"                                  : ">=5.4.0",
         "symfony/symfony"                      : "~2.7",
         "doctrine/orm"                         : "~2.5",
         "doctrine/dbal"                        : "~2.5",
