Remaster from SimpleBus

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,8 +1,7 @@
 imports:
     - { resource: voters.yml }
-    - { resource: simplebus/middleware.yml }
-    - { resource: simplebus/shared.yml }
-    - { resource: simplebus/users.yml }
+    - { resource: commandbus/shared.yml }
+    - { resource: commandbus/users.yml }
 
 services:
 
