--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -2,6 +2,7 @@ imports:
     - { resource: config_dev.yml }
 
 parameters:
+    locale:                 en_US
     security_auth_attempts: 2
     security_lock_time:     1800
 
