--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -21,7 +21,7 @@ parameters:
     ldap_tls:               false
     ldap_basedn:            DC=example,DC=com
 
-    locale:                 en
+    locale:                 en_US
     theme:                  azure
 
     secret:                 8fb375ea50e0f6230ad0cc722be8293a7177f9e4
