--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ addons:
         - php5-ldap
 
 before_install:
-    - echo 'extension = ldap.so' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+    - echo 'extension = ldap.so'                >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+    - echo 'default_charset = "UTF-8"'          >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
     - echo 'date.timezone = "Pacific/Auckland"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
 
 install:
