--- a/app/config/voters.yml
+++ b/app/config/voters.yml
@@ -10,4 +10,4 @@ services:
         class: eTraxis\Voter\UserVoter
         public: false
         tags: [{ name: security.voter }]
-        arguments: [ @doctrine ]
+        arguments: [ @doctrine, %password_expiration% ]
